[tool.poetry]
name = "viburnum"
version = "0.1.0"
description = "It's abstraction on top of AWS CDK, that helps in building serverless web applications."
authors = ["Yaroslav Martynenko <stikblacklabel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

constructs = {version = ">=10.0.0,<11.0.0", optional = true}
aws-cdk-lib = {version = "2.50.0", optional = true}

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.8"
pylint = "^2.15.5"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
constructs = ["constructs"]
cdk = ["aws-cdk-lib"]
deployer = ["constructs", "aws-cdk-lib"]